added monitoring methods used in NeqSim API